[gd_scene load_steps=4 format=3 uid="uid://d37adrmqjkfm6"]

[ext_resource type="Script" path="res://Scripts/MainScenes/player_selection.gd" id="1_bcl1b"]
[ext_resource type="PackedScene" uid="uid://chr5bm0rlck45" path="res://Scenes/Prefabs/player.tscn" id="1_qbp6w"]
[ext_resource type="Theme" uid="uid://dg3pagkwwvsgi" path="res://Assets/_Settings/Themes/green.tres" id="3_41fwb"]

[node name="Player Selection" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -620.0
offset_top = -128.0
offset_right = -580.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bcl1b")

[node name="Player" parent="." instance=ExtResource("1_qbp6w")]
scale = Vector2(10, 10)
playerIndex = 1
isPlayerMenu = true
canShoot_Move = false

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -144.0
offset_top = -193.0
offset_right = 144.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
placeholder_text = "Controller 1"
alignment = 1

[node name="Computer" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 19.0
offset_top = -247.0
offset_right = 141.0
offset_bottom = -182.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_41fwb")
theme_override_font_sizes/font_size = 40
text = "Com"

[node name="ColorSelect" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -247.0
offset_right = 12.0
offset_bottom = -182.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
selected = 0
item_count = 8
popup/item_0/text = "Blue"
popup/item_1/text = "Red"
popup/item_1/id = 1
popup/item_2/text = "Green"
popup/item_2/id = 2
popup/item_3/text = "Yellow"
popup/item_3/id = 3
popup/item_4/text = "Violet"
popup/item_4/id = 4
popup/item_5/text = "Orange"
popup/item_5/id = 5
popup/item_6/text = "Purple"
popup/item_6/id = 6
popup/item_7/text = "Pink"
popup/item_7/id = 7

[connection signal="text_submitted" from="Name" to="." method="submitPlayer"]
[connection signal="pressed" from="Computer" to="." method="setComputer"]
